fixed alignment, aligned to left

--- a/src/components/SpringMeter/SpringMeter.css
+++ b/src/components/SpringMeter/SpringMeter.css
@@ -31,7 +31,7 @@
 
 .container {
   display: flex;
-  align-items: center;
+  align-items: left;
   height: 100%;
-  justify-content: center;
+  justify-content: left;
 }
